--- a/ag-uc/src/main/resources/application.yml
+++ b/ag-uc/src/main/resources/application.yml
@@ -3,9 +3,9 @@ spring:
     name: user-center
   datasource:
     name: test
-    url: jdbc:mysql://localhost:3306/ag_admin?useUnicode=true&characterEncoding=UTF8
+    url: jdbc:mysql://172.16.33.139:3306/ag_admin?useUnicode=true&characterEncoding=UTF8
     username: root
-    password: 123456
+    password: user123
     # 使用druid数据源
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.jdbc.Driver
