--- a/ag-uc/src/main/resources/application.yml
+++ b/ag-uc/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 spring:
   application:
-    name: user-center
+    name: ag-uc
   datasource:
     name: test
     url: jdbc:mysql://172.16.33.139:3306/ag_admin?useUnicode=true&characterEncoding=UTF8
     username: root
-    password: user123
+    password: Foxconn123
     # 使用druid数据源
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.jdbc.Driver
@@ -28,4 +28,6 @@ eureka:
       defaultZone: http://localhost:8761/eureka
 server:
   port: 7772
-
+mybatis:
+    basepackage: com.xiecj.cloud.uc.mapper
+    xmlLocation: classpath:mapper/**/*.xml
