--- a/ag-uc/pom.xml
+++ b/ag-uc/pom.xml
@@ -66,6 +66,11 @@
             <artifactId>pagehelper-spring-boot-starter</artifactId>
             <version>1.1.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.xiecj.cloud</groupId>
+            <artifactId>ag-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
