add log setting

--- a/ag-uc/src/main/resources/application.yml
+++ b/ag-uc/src/main/resources/application.yml
@@ -31,3 +31,6 @@ server:
 mybatis:
     basepackage: com.xiecj.cloud.uc.mapper
     xmlLocation: classpath:mapper/**/*.xml
+logging:
+  level:
+    com.xiecj.cloud.uc.mapper: debug
