--- a/cg-zuul/src/main/resources/application.yml
+++ b/cg-zuul/src/main/resources/application.yml
@@ -16,6 +16,6 @@ zuul:
 jwt:
   expire: 3600
   pri-key:
-    path: E:\\workspaces\\ag-demo\\cg-zuul\\src\\test\\resources\\pri.key
+    path: E:\\workspaces\\ag-demo\\cg-zuul\\src\\main\\resources\\pri.key
   pub-key:
-    path: E:\\workspaces\\ag-demo\\cg-zuul\\src\\test\\resources\\pub.key
+    path: E:\\workspaces\\ag-demo\\cg-zuul\\src\\main\\resources\\pub.key
