zuul add Access Filter

--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>1.2.33</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
