--- a/ag-auth/src/main/resources/application.yml
+++ b/ag-auth/src/main/resources/application.yml
@@ -1,6 +1,27 @@
 spring:
   application:
     name: ag-auth
+  datasource:
+    name: test
+    url: jdbc:mysql://172.16.33.139:3306/ag_gate?useUnicode=true&characterEncoding=UTF8
+    username: root
+    password: Foxconn123
+    # 使用druid数据源
+    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: com.mysql.jdbc.Driver
+    filters: stat
+    maxActive: 20
+    initialSize: 1
+    maxWait: 60000
+    minIdle: 1
+    timeBetweenEvictionRunsMillis: 60000
+    minEvictableIdleTimeMillis: 300000
+    validationQuery: select 'x'
+    testWhileIdle: true
+    testOnBorrow: false
+    testOnReturn: false
+    poolPreparedStatements: true
+    maxOpenPreparedStatements: 20
 eureka:
   client:
     service-url:
@@ -8,9 +29,20 @@ eureka:
 server:
   port: 7774
 
+mybatis:
+    basepackage: com.xiecj.cloud.auth.mapper
+    xmlLocation: classpath:mapper/**/*.xml
+
 jwt:
   expire: 3600
   pri-key:
-    path: E:\\workspaces\\ag-demo\\ag-auth\\src\\main\\resources\\pri.key
+    path: E:\\workspaces\\ag-demo\\ag-auth\\src\\main\\resources\\jwt\\pri.key
   pub-key:
-    path: E:\\workspaces\\ag-demo\\ag-auth\\src\\main\\resources\\pub.key
+    path: E:\\workspaces\\ag-demo\\ag-auth\\src\\main\\resources\\jwt\\pub.key
+
+client:
+  expire: 3600
+  pri-key:
+    path: E:\\workspaces\\ag-demo\\ag-auth\\src\\main\\resources\\client\\pri.key
+  pub-key:
+    path: E:\\workspaces\\ag-demo\\ag-auth\\src\\main\\resources\\client\\pub.key
