--- a/ag-uc/pom.xml
+++ b/ag-uc/pom.xml
@@ -71,6 +71,10 @@
             <artifactId>ag-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-feign</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
